--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
 <div class="container">
 
     <div class="jumbotron text-center">
-        <h1>CheckList App</h1>
-        <img src="img/catToDoList.jpeg" alt="Logo">
+        <h1>CheckList</h1>
+        <img src="img/toDoList.jpeg" alt="Logo" height="520px" width="470px">
 
         <p>Login or Signup:</p>
 
