--- a/public/style.css
+++ b/public/style.css
@@ -4,10 +4,13 @@
 /*******************************************/
 
 body {
-  color: black;
-  font-size: 12px;
+  background-image: url('img/galaxy.jpeg');
+  background-size: cover;
+  color: white;
+  font-size: 15px;
   line-height: 1.4;
   font-family: Helvetica, Arial, sans-serif;
+  text-align: center;
 }
 
 *{
@@ -17,7 +20,32 @@ body {
 .clear {
  clear: both;
 }
+.jumbotron h1{
+  color:magenta;
+}
+.jumbotron p{
+  color: magenta;
+}
+ul {
+ margin: auto;
+  background: rgba(236, 110, 236, 0.3);;
+  padding: 15px 15px 15px 5px;
+  width: 50%;
+  height: 400px;
+  list-style: none;
+}
+ul li {
+ 
+  background:rgb(216, 166, 216);
+  padding-left: 5px;
+  margin: 5px 5px 5px 30px;
+}
 
+button {
+  background-color: white;
+  color: black;
+  border: 4px solid #00b4fc; /* Green */
+}
 /******************************************
 /* LAYOUT
 /*******************************************/
